tests/lifetime/inter_decl/named_region_scope.sim
# Named lifetimes referenced in a decl (struct field, enum variant,
# fn param, fn local, or type-argument position) must appear on the
# enclosing decl's lifetime-parameter list. Any reference to an
# undeclared lifetime fires TC-UndeclaredLifetime.

# ---------- local declares 'a but fn has no lifetime params ----------

fn local_names_undeclared_lifetime() {
  r: &'a i64;
  entry:
    return
}

# ---------- local declares 'b but fn only declares 'a ----------

fn<'a> local_names_different_lifetime(x: &'a i64) {
  r: &'b i64;
  entry:
    return
}

# ---------- struct type-arg references an undeclared lifetime ----------

struct<'a> WrapMe: Move { r: &'a i64 }

fn uses_wrap_with_undeclared_lifetime() {
  w: WrapMe<'nope>;
  entry:
    return
}
